feat: implement sign in, sign up, log out

--- a/package.json
+++ b/package.json
@@ -11,13 +11,37 @@
     "@types/node": "^16.11.48",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "antd": "^4.22.5",
+    "axios": "^0.27.2",
+    "browserify-zlib": "^0.2.0",
+    "console-browserify": "^1.2.0",
+    "constants-browserify": "^1.0.0",
+    "crypto-browserify": "^3.12.0",
+    "destroy": "^1.2.0",
+    "domain-browser": "^4.22.0",
+    "events": "^3.3.0",
+    "https-browserify": "^1.0.0",
+    "node-polyfill-webpack-plugin": "^2.0.1",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
+    "punycode": "^2.1.1",
+    "querystring-es3": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "sass": "^1.54.4",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "string_decoder": "^1.3.0",
+    "timers-browserify": "^2.0.12",
+    "tty-browserify": "^0.0.1",
     "typescript": "^4.7.4",
+    "url": "^0.11.0",
+    "util": "^0.12.4",
+    "vm-browserify": "^1.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -45,10 +69,18 @@
     ]
   },
   "devDependencies": {
-    "babel-eslint": "^10.1.0",
+    "@types/body-parser": "^1.19.2",
+    "@types/json-server": "^0.14.4",
+    "@types/jsonwebtoken": "^8.5.8",
+    "body-parser": "^1.20.0",
     "eslint": "^8.21.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "2.7.1"
+    "json-server": "^0.17.0",
+    "json-server-auth": "^2.1.0",
+    "jsonwebtoken": "^8.5.1",
+    "prettier": "2.7.1",
+    "react-cookie": "^4.1.1",
+    "react-hook-form": "^7.34.2"
   }
 }
